--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,6 @@ before install:
 
 script:
 	- if [[ "$COMPONENT" == "server" ]]; then cd KituraServer && "./Package-Builder/build-package.sh -projectDir $TRAVIS_BUILD_DIR
-	- if [[ "$COMPONENT" == "iOS" ]]; then cd $TRAVIS_BUILD_DIR/KituraiOS; xcodebuild -xcodeproj iOS\ Sample\ Kitura\ Buddy.xcodeproj/ -scheme iOS\ Sample\ Kitura\ Buddy -sdk iphonesimulator11.0 ONLY_ACTIVE_ARCH=NO -quiet; fi
+	- if [[ "$COMPONENT" == "iOS" ]]; then cd $TRAVIS_BUILD_DIR/KituraiOS; xcodebuild  -sdk iphonesimulator11.0  -configuration Release clean; xcodebuild  -sdk iphonesimulator11.0  -configuration Release build -target LoggerAPI -target CircuitBreaker -target SwiftyRequest -target SafetyContracts; xcodebuild -project iOS\ Sample\ Kitura\ Buddy.xcodeproj/ -target iOS\ Sample\ Kitura\ Buddy -sdk iphonesimulator11.0 ONLY_ACTIVE_ARCH=NO -quiet; fi
 
 
