--- a/.travis.yml
+++ b/.travis.yml
@@ -11,17 +11,14 @@ matrix:
       env: COMPONENT=server
     - os: osx
       osx_image: xcode9
-      sudo: required
       env: COMPONENT=server
     - os: osx
       osx_image: xcode9
-    env: COMPONENT=iOS
+      env: COMPONENT=iOS
 
 before install:
-  - ls -la
-#  - git clone https://github.com/IBM-Swift/Package-Builder.git ToDoServer/Package-Builder
+  - git clone https://github.com/IBM-Swift/Package-Builder.git ToDoServer/Package-Builder
 
 script:
-  - ls -la
-#  - if [[ "$COMPONENT" == "server" ]]; then cd $TRAVIS_BUILD_DIR/ToDoServer && ./Package-Builder/build-package.sh -projectDir $TRAVIS_BUILD_DIR; fi
-#  - if [[ "$COMPONENT" == "iOS" ]]; then cd $TRAVIS_BUILD_DIR/KituraiOS; xcodebuild  -sdk iphonesimulator11.0  -configuration Release clean; xcodebuild  -sdk iphonesimulator11.0  -configuration Release build -target LoggerAPI -target CircuitBreaker -target SwiftyRequest -target SafetyContracts; xcodebuild -project iOS\ Sample\ Kitura\ Buddy.xcodeproj/ -target iOS\ Sample\ Kitura\ Buddy -sdk iphonesimulator11.0 ONLY_ACTIVE_ARCH=NO -quiet; fi
+  - if [[ "$COMPONENT" == "server" ]]; then cd $TRAVIS_BUILD_DIR/ToDoServer && ./Package-Builder/build-package.sh -projectDir $TRAVIS_BUILD_DIR; fi
+  - if [[ "$COMPONENT" == "iOS" ]]; then cd $TRAVIS_BUILD_DIR/KituraiOS; xcodebuild  -sdk iphonesimulator11.0  -configuration Release clean; xcodebuild  -sdk iphonesimulator11.0  -configuration Release build -target LoggerAPI -target CircuitBreaker -target SwiftyRequest -target SafetyContracts; xcodebuild -project iOS\ Sample\ Kitura\ Buddy.xcodeproj/ -target iOS\ Sample\ Kitura\ Buddy -sdk iphonesimulator11.0 ONLY_ACTIVE_ARCH=NO -quiet; fi
