--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ matrix:
       env: COMPONENT=iOS
 
 before_install:
-  - git clone -b issue.riak https://github.com/IBM-Swift/Package-Builder.git ToDoServer/Package-Builder
+  - git clone -b master https://github.com/IBM-Swift/Package-Builder.git ToDoServer/Package-Builder
 
 script:
   - if [[ "$COMPONENT" == "server" ]]; then cd $TRAVIS_BUILD_DIR/ToDoServer && ./Package-Builder/build-package.sh -projectDir $TRAVIS_BUILD_DIR; fi
