--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ before_install:
 
 script:
   - if [[ "$COMPONENT" == "server" ]]; then cd $TRAVIS_BUILD_DIR/ToDoServer && ./Package-Builder/build-package.sh -projectDir $TRAVIS_BUILD_DIR; fi
-  - if [[ "$COMPONENT" == "iOS" ]]; then cd $TRAVIS_BUILD_DIR/KituraiOS; xcodebuild -project iOS\ Sample\ Kitura\ Buddy.xcodeproj/ -target iOS\ Sample\ Kitura\ Buddy -sdk iphonesimulator11.0 ONLY_ACTIVE_ARCH=NO -quiet; fi
+  - if [[ "$COMPONENT" == "iOS" ]]; then cd $TRAVIS_BUILD_DIR/KituraiOS; xcodebuild -project iOSSampleKituraKit.xcodeproj/ -target iOS\ Sample\ Kitura\ Buddy -sdk iphonesimulator11.0 ONLY_ACTIVE_ARCH=NO -quiet; fi
