Cleaned up .gitignore; minor updates to README.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,6 @@
-.build/*
-/ToDoServer/.build/*
-ToDoServer/ToDoServer.xcodeproj/*
-.../UserInterfaceState.xcuserstate
-.build-ubuntu/*
-*.xcodeproj/*
-Package.resolved
-xcuserdata
 .DS_Store
-/Packages
-/config.json
-/spec.json
-./config/localdev-config.json
+ToDoServer/config/localdev-config.json
+ToDoServer/.build/*
+ToDoServer/.build-ubuntu/*
+ToDoServer/ToDoServer.xcodeproj/*
+
