Updated to support IBM Cloud deployment over localhost

--- a/ToDoServer/manifest.yml
+++ b/ToDoServer/manifest.yml
@@ -4,6 +4,6 @@ applications:
   timeout: 180
   name: iOSSampleKituraBuddy
   buildpack: swift_buildpack
-  command: iOSSampleKituraBuddy
+  command: ToDoServer
   memory: 128M
   random-route: true
