--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@ ToDoServer/.build-ubuntu/*
 ToDoServer/ToDoServer.xcodeproj/*
 KituraiOS/iOSKituraKitSample.xcodeproj/xcuserdata/*
 KituraiOS/iOSKituraKitSample.xcodeproj/project.xcworkspace/xcuserdata/*
-
+KituraiOS/iOSKituraKitSample.xcworkspace
+KituraiOS/Podfile.lock
+KituraiOS/Pods
